--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Etch-A-Sketch</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+    </style>
+    <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript" src="index.js" defer></script>
+  </head>
+  <body>
+    <h1>Etch-A-Sketch</h1>
+    <div id="mainContent">
+      <div id="controlPanel">
+        <button class="btn">Reset Grid</button>
+        <button class="btn">Black & White</button>
+        <button class="btn">Rainbow</button>
+        <button class="btn">Eraser</button>
+      </div>
+      <div id="gridContainer"></div>
+    </div>
+  </body>
+</html>
