--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
       @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
     </style>
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="index.js" defer></script>
+    <script type="text/javascript" src="script.js" defer></script>
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
     <div id="mainContent">
       <div id="controlPanel">
-        <button class="btn">Reset Grid</button>
-        <button class="btn">Black & White</button>
-        <button class="btn">Rainbow</button>
-        <button class="btn">Eraser</button>
+        <button id="refreshPageBtn" class="btn">Refresh Page</button>
+        <button id="resizeGridBtn" class="btn">Resize Grid</button>
+        <button id="toggleBWBtn" class="btn">Black & White</button>
+        <button id="toggleShadesBtn" class="btn">Shades of Purple</button>
+        <button id="toggleLightenBtn" class="btn">Lighten</button>
+        <button id="toggleDarkenBtn" class="btn">Darken</button>
+        <button id="toggleRainbowBtn" class="btn">Rainbow</button>
+        <button id="toggleEraserBtn" class="btn">Eraser</button>
       </div>
       <div id="gridContainer"></div>
     </div>
