Two colors and eraser now functional

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Etch-A-Sketch</h1>
     <div id="mainContent">
       <div id="controlPanel">
-        <button id="refreshPageBtn" class="btn">Refresh Page</button>
+        <button id="refreshPageBtn" class="btn">Clear All</button>
         <button id="resizeGridBtn" class="btn">Resize Grid</button>
         <button id="toggleBWBtn" class="btn">Black & White</button>
         <button id="toggleShadesBtn" class="btn">Shades of Purple</button>
