Rainbow mode works

--- a/index.html
+++ b/index.html
@@ -16,13 +16,29 @@
     <div id="mainContent">
       <div id="controlPanel">
         <button id="refreshPageBtn" class="btn">Clear All</button>
-        <button id="resizeGridBtn" class="btn">Resize Grid</button>
-        <button id="toggleBWBtn" class="btn">Black & White</button>
-        <button id="toggleShadesBtn" class="btn">Shades of Purple</button>
-        <button id="toggleLightenBtn" class="btn">Lighten</button>
-        <button id="toggleDarkenBtn" class="btn">Darken</button>
+        <button
+          id="toggleBlackBtn"
+          class="btn"
+          style="background-color: black"
+        ></button>
+        <button
+          id="toggleShadesBtn"
+          class="btn"
+          style="background-color: purple"
+        ></button>
+        <button
+          id="toggleLightenBtn"
+          class="btn"
+          style="background-color: #cd2ecd"
+        ></button>
+        <button
+          id="toggleDarkenBtn"
+          class="btn"
+          style="background-color: #ba7bba"
+        ></button>
         <button id="toggleRainbowBtn" class="btn">Rainbow</button>
-        <button id="toggleEraserBtn" class="btn">Eraser</button>
+        <button id="toggleEraserBtn" class="btn"></button>
+        <button id="resizeGridBtn" class="btn">Resize Grid</button>
       </div>
       <div id="gridContainer"></div>
     </div>
