--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 
           <div class="inputDiv">
             <label for="width">Width:</label>
-            <input type="text" id="width" name="width" class="inputField" />
+            <input
+              type="text"
+              id="width"
+              name="width"
+              class="inputField"
+              onkeyup="matchWidthToHeight();"
+            />
           </div>
 
           <button id="submitInputBtn" class="btn">Submit</button>
