Cleaned up code, reorganized CSS

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         ></button>
         <button id="resizeGridBtn" class="btn">Resize Grid</button>
 
-        <div class="form hidden">
+        <div id="form" class="form hidden">
           <div class="inputDiv">
             <label for="height">Height:</label>
             <input type="text" id="height" name="height" class="inputField" />
