Added footer, refactored, final styling updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         ></button>
         <button id="resizeGridBtn" class="btn">Resize Grid</button>
 
-        <div id="form" class="form hidden">
+        <div id="form" class="form">
           <div class="inputDiv">
             <label for="height">Height:</label>
             <input type="text" id="height" name="height" class="inputField" />
@@ -60,11 +60,20 @@
               onkeyup="matchWidthToHeight();"
             />
           </div>
-
-          <button id="submitInputBtn" class="btn">Submit</button>
         </div>
       </div>
       <div id="gridContainer"></div>
     </div>
+    <footer>
+      Designed & built by Jasmine Elkins | November 2021
+      <a href="https://github.com/j-elkins/etch-a-sketch">
+        <img
+          src="/github-logo-white.png"
+          alt="GitHub logo"
+          height="20px"
+          width="20px"
+        />
+      </a>
+    </footer>
   </body>
 </html>
