Fixed logo & background to load on github pages. Updated footer.

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       <div id="gridContainer"></div>
     </div>
     <footer>
-      Designed & built by Jasmine Elkins | November 2021
+      <p>Designed & built by Jasmine Elkins | November 2021</p>
+
       <a href="https://github.com/j-elkins/etch-a-sketch">
         <img
-          src="/github-logo-white.png"
+          src="http://j-elkins.github.io/etch-a-sketch/github-logo-white.png"
           alt="GitHub logo"
           height="20px"
           width="20px"
