CSS Styling, text shadow, refactored JS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="script.js" defer></script>
   </head>
   <body>
-    <h1>Etch-A-Sketch</h1>
+    <h1 class="header">Etch-A-Sketch</h1>
     <div id="mainContent">
       <div id="controlPanel">
         <button id="refreshPageBtn" class="btn">Clear All</button>
